--- a/css/styles.css
+++ b/css/styles.css
@@ -362,6 +362,7 @@ th {
   border-radius: 1rem;
   overflow: hidden;
   background-color: white;
+  text-align: center;
   background-color: white;
   -webkit-box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.02);
           box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.02);
@@ -502,6 +503,7 @@ th {
   background-color: white;
   margin-left: 1rem;
   margin-right: 1rem;
+  text-align: center;
 }
 
 .card-text .fa-seedling {
