--- a/css/styles.scss
+++ b/css/styles.scss
@@ -460,7 +460,7 @@ img {
 	}
 	.hero-background-home {
 		border-radius: 2rem;
-		background-image: linear-gradient(rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.4)), url(/image/hero-home.jpg);
+		background-image: linear-gradient(rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.4)), url(/image/hero-home-2.jpg);
 		background-position: 50% 70%;
 		background-color: map-get($map: $color, $key: light);
 		box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
@@ -546,7 +546,7 @@ img {
 	}
 	.hero-background-home {
 		border-radius: 2rem;
-		background-image: linear-gradient(rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.4)), url(/image/hero-home.jpg);
+		background-image: linear-gradient(rgba(255, 255, 255, 0.9),rgba(255, 255, 255, 0.4)), url(/image/hero-home-2.jpg);
 		background-position: 88% 50%;
 		background-color: map-get($map: $color, $key: light);
 		box-shadow: 0 20px 20px 0px rgba(0, 0, 0, 0.020);
